tests/baselines/reference/binary-invalid-digit.errors.txt
binary-invalid-digit.ts(22,3): error TS1177: Binary digit expected.


==== binary-invalid-digit.ts (1 errors) ====
    // Copyright (C) 2015 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    es6id: 11.8.3
    description: Binary-integer-literal-like sequence containing an invalid digit
    info: |
        BinaryIntegerLiteral ::
          0b BinaryDigits
          0B BinaryDigits
        BinaryDigits ::
          BinaryDigit
          BinaryDigits BinaryDigit
        BinaryDigit :: one of
          0 1
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    0b2;
      
!!! error TS1177: Binary digit expected.
    